# text2ql

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json  run_deterministic_benchmark.py  run_llm_benchmark.py
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  tests.yml
examples/: requirements.txt  sample_data.json  sample_schema.json  streamlit_app.py
src/text2ql/: __init__.py  _cli_utils.py  cli.py  constrained.py  core.py  dataset.py  evaluate.py  filters.py  ir.py  json_execution.py  mapping.py  prompting.py  renderers.py  rewrite.py  schema_config.py  sql_executor.py  types.py
src/text2ql/benchmarks/: __init__.py  bird.py  runner.py  spider.py
src/text2ql/engines/: __init__.py  base.py  graphql.py  graphql_detection.py  graphql_filter_parsing.py  graphql_validation.py  holdings_utils.py  sql.py  sql_detection.py  sql_filter_parsing.py  sql_validation.py  text_utils.py
src/text2ql/providers/: __init__.py  base.py  openai_compatible.py  rule_based.py
tests/: test_graphql_engine.py
tests/e2e/: test_graphql_e2e.py  test_ir_renderer_e2e.py  test_sql_e2e.py  test_text2ql_e2e.py
tests/unit/: test_benchmarks_unit.py  test_cli_unit.py  test_cli_utils_unit.py  test_dataset_and_eval_unit.py  test_engine_text_utils_unit.py  test_graphql_engine_unit.py  test_holdings_utils_unit.py  test_json_execution_unit.py  test_llm_mode_unit.py  test_mapping_hybrid_unit.py  test_openai_provider_unit.py  test_schema_config.py  test_sql_engine_unit.py  test_sql_executor_unit.py
