[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text2ql"
version = "0.1.6"
description = "Natural language to any query language, starting with GraphQL"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  {name = "text2ql contributors"}
]
keywords = ["nl2sql", "nl2graphql", "text2query", "llm", "graphql"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/riteshakumar/text2ql"
Repository = "https://github.com/riteshakumar/text2ql"
Issues = "https://github.com/riteshakumar/text2ql/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
text2ql = "text2ql.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "unit: fast isolated unit tests",
  "e2e: end-to-end integration-style tests",
]
